# birdseye

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  allow_ping.py  backup_common.py  backup_volumes.py  cleanup_ephemeral.py  events.py  export_objects.py  list_policies.py  main.py  manage_posture.py  nb_client.py  netbird_overview.py  pyproject.toml  release.sh  resolver.py  setup_keys.py  smtp_helpers.py
.github/workflows/: release-docker.yml
docker/: .env.example  Dockerfile  cron_wrapper.sh  crontab.template  docker-compose.yml  entrypoint.sh  event_forwarder.py  run_backup.sh  supervisord.conf
