[project]
name = "birdseye"
version = "0.1.2"
description = "Bird's-eye view of a self-hosted NetBird: audit-event forwarder + scheduled cleanup jobs"
requires-python = ">=3.12"
dependencies = [
    "netbird>=1.3.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
